public interface Transportable extends HasPosition {
}
